# django-flex-abac

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  VERSION_backup  setup.cfg  setup.py
docs/: additional_functions.rst  advanced_usage.rst  attribute_types.rst  commands.rst  concepts.rst  conf.py  faq.rst  getting_started.rst  getting_started_with_rest_api.rst  index.rst  installation.rst  known_caveats.rst  rest_api.rst  run_livereload.py  usage_recipes.rst
example/: docker-compose.yml  dockerfile.backend.dev  dockerfile.frontend.dev
example/backend/: pytest.ini  requirements.txt
example/frontend/: package.json  vue.config.js
flex_abac/: __init__.py  admin.py  apps.py  checkers.py  constants.py  lookups.py  mixins.py  permissions.py  urls.py
flex_abac/factories/: actionfactory.py  categoricalattributefactory.py  categoricalfilterfactory.py  genericattributefactory.py  genericfilterfactory.py  materializednestedcategoricalattributefactory.py  materializednestedcategoricalfilterfactory.py  nestedcategoricalattributefactory.py  nestedcategoricalfilterfactory.py  policyactionfactory.py  policycategoricalfilterfactory.py  policyfactory.py  policygenericfilterfactory.py  rolefactory.py  rolepolicyfactory.py  userfactory.py  userrolefactory.py
flex_abac/migrations/: 0001_initial.py  0002_basefilter_name_squashed_0011_auto_20210930_1235.py
flex_abac/models/: __init__.py  action.py  actionmodel.py  base_attribute.py  base_filter.py  categorical_attribute.py  categorical_filter.py  generic_attribute.py  generic_filter.py  item_base_filter.py  (+21 more)
(+92 files in other folders)
