[metadata]
name = django-flex-abac
description = django-flex-abac is a Python library for a generic, easy to use, application of an Attribute-Role-based access control system
long_description = file: README.md
url = https://github.com/batvoice-org/django-flex-rbac
author = Batvoice AI
author_email = contact@batvoice.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
